<?xml version="1.0"?>
<package format="2">

  <name>mpu_9250_driver</name>
  <version>1.0.0</version>
  <description>A ROS driver for the InvenSense MPU9250/MPU6050 9DoF IMU</description>
  <license>MIT</license>

  <author email="sujiwo@gmail.com">Adi Sujiwo</author>
  <maintainer email="sujiwo@gmail.com">Adi Sujiwo</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

</package>
